--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
 
 * {
-    font-family: Inter;
     padding: 0;
     margin: 0;
+}
+main {
     color: #001196;
 }
-
 .field {
     display: flex;
     flex-direction: column;
@@ -72,7 +72,7 @@ legend {
 
 .main-row {
     display: flex;
-    align-items: flex-start;
+    align-items: stretch;
     gap: 1em;
 }
 .main-left {
@@ -146,7 +146,22 @@ header {
     background-color: #001196;
     color: white;
     padding: 0.5em 0;
+    font-size: 1.5em;
     justify-content: center;
+    align-items: center;
+}
+
+.header-button {
+    margin-right: auto;
+    padding-left: 1em;
+}
+
+.header-title {
+    margin-right: auto;
+    font-family: 'Cardo', serif;
+}
+
+.sidebar-button {
     font-family: 'Cardo', serif;
     font-size: 1.5em;
 }
